--- a/views/manager/staticDashboard.hbs
+++ b/views/manager/staticDashboard.hbs
@@ -37,6 +37,7 @@
                 <br>
                 <span>Count Staff Support: {{countStaffS}}</span>
                 <br>
+                <span>Year: {{thisYear}}</span>
             </div>
 
 
