--- a/views/admin/updateClosureDate.hbs
+++ b/views/admin/updateClosureDate.hbs
@@ -20,8 +20,7 @@
             <div class="top_content_updateDate">
                 <div class="table_title">
                     <h2>Update Closure Date </h2>
-                    <p>( Start Date : {{dateDetail.startDate}} )</p>
-                    <p>( End Date : {{dateDetail.endDate}} )</p>
+                    <p>( {{dateDetail.name}} )</p>
                 </div>
 
                 <table>
