--- a/views/partial/headerManager.hbs
+++ b/views/partial/headerManager.hbs
@@ -21,6 +21,9 @@
                             <li>
                                 <a href="../manager/staticDashboard">Static Dashboard</a>
                             </li>
+                            <li>
+                                <a href="../manager/downloadCategory">Category Download</a>
+                            </li>
 
                             <li>
                                 <a href="../">Logout</a>
