--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -83,21 +83,7 @@
                         </button>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <div class="card-body">
-                            Leave a comment:
-                        </div>
-                    </div>
-                    <form action="/staff/do-comment" action="POST" class="comment-form">
-                        <div class="form-group">
-                            <input type="hidden" value="{{_id}}" name="postId">
-                            <input type="hidden" value="{{email}}" name="email">
-                            <textarea class="form-control" name="content"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Post comment</button>
-                    </form>
-                </div>
+
 
             </div>
             
@@ -166,7 +152,7 @@
                         ajax.send("postId="+ postId);
                     }
 
-                    window.addEventListener('load', () => {
+                    {{!-- window.addEventListener('load', () => {
                         const cmtForm = document.querySelectorAll('.comment-form');
                         cmtForm.forEach(form => {
                             form.addEventListener('submit', (event) => {
@@ -197,7 +183,7 @@
                                 ajax.send(JSON.stringify(json));
                             })
                         })
-                    })
+                    }) --}}
                 </script>
         </div>
 
