--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -83,6 +83,22 @@
                         </button>
                     </div>
                 </div>
+                <div>
+                    {{!-- <div>
+                        <div class="card-body">
+                            Leave a comment:
+                        </div>
+                    </div>
+                    {{!-- <form action="/staff/do-comment" action="POST" class="comment-form">
+                        <div class="form-group">
+                            <input type="hidden" value="{{_id}}" name="postId">
+                            <input type="hidden" value="{{email}}" name="email">
+                            <textarea class="form-control" name="content"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Post comment</button>
+                    </form> --}}
+                </div> 
+
 
 
             </div>
