--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -57,9 +57,9 @@
                     <br>
                     <span>Category: {{category}}</span>
                     <br>
-                    <span>Viewers: {{views}}</span>
-                    <br>
                     <span><a href="/staff/viewIdea?id={{_id}}">View more</a></span>
+                    <br>
+                    <span><i class="fa-solid fa-eye"></i> &nbsp; {{views}}</span>
                     <br>
                     <input type="hidden" name="postId" value="{{_id}}">
                 </div>
@@ -83,22 +83,6 @@
                         </button>
                     </div>
                 </div>
-                <div>
-                    {{!-- <div>
-                        <div class="card-body">
-                            Leave a comment:
-                        </div>
-                    </div>
-                    {{!-- <form action="/staff/do-comment" action="POST" class="comment-form">
-                        <div class="form-group">
-                            <input type="hidden" value="{{_id}}" name="postId">
-                            <input type="hidden" value="{{email}}" name="email">
-                            <textarea class="form-control" name="content"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Post comment</button>
-                    </form> --}}
-                </div> 
-
 
 
             </div>
