--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,7 +6,7 @@
 .hero{
     height: 100%;
     width: 100%;
-    background-image: url(https://www.gre.ac.uk/__data/assets/image/0025/5767/gr-domes-night-01.jpg);
+    background-image: url("https://www.gre.ac.uk/__data/assets/image/0025/5767/gr-domes-night-01.jpg");
     background-position: center;
     background-size: cover;
     position: absolute; 
