--- a/public/css/normal_layout.css
+++ b/public/css/normal_layout.css
@@ -9,7 +9,10 @@ div.container{
     height: 900px;
 
 }
-
+div.intro_image_content{
+    width: 100%;
+    height: 100%;
+}
 /*=============================== Header ===============================*/
 
 div.leftSideHeader {
