--- a/views/coordinator/coordinatorHome.hbs
+++ b/views/coordinator/coordinatorHome.hbs
@@ -19,7 +19,7 @@
     <div class="main_Content">
 
         <div class="intro_image_content">
-            <img src="">
+            <img src="https://www.gre.ac.uk/__data/assets/image/0025/5767/gr-domes-night-01.jpg">
         </div>
     </div>
 
