--- a/views/coordinator/coordinatorHome.hbs
+++ b/views/coordinator/coordinatorHome.hbs
@@ -13,7 +13,7 @@
 <body>
 </body>
 <div class="container">
-    {{> header }}
+    {{> headercoordinator }}
 
     <!-- Content -->
     <div class="main_Content">
