--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -93,6 +93,7 @@
                             <td></td>
                             <td>
                                 <input type="submit" value="Submit" class="insertButton" name="submit" onclick="check()">
+                                <input type="hidden" value="{{viewDetail.email}}" name="email">
                                 {{!-- <p>{{message}}</p> --}}
                             </td>
                         </tr>
