--- a/views/admin/closureDate.hbs
+++ b/views/admin/closureDate.hbs
@@ -28,7 +28,7 @@
                                     <input type="text" name="txtName"> 
                                 </td> 
                                 <td style="color: brown;">{{errorMessage}}</td> --}}
-                                <div class="dropbox">
+                                <div class="dropbox" style="width:30%; margin-left:12px ; margin-top:10px">
                                         <select name="txtCategorySelected">
                                             {{#each categories}}
                                             <option value="{{this}}">{{this}}</option>
