--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -258,7 +258,8 @@ div.bottom_content_closureDate {
     width: 100%;
     height: 56%;
     overflow-y: auto;
-    padding:10px;
+    padding:15px;
+    margin-top: 20px;
 }
 
 
