--- a/views/admin/updateAccount.hbs
+++ b/views/admin/updateAccount.hbs
@@ -30,28 +30,27 @@
                         <tr>
                             <td>Name : </td>
                             <td><input type="text" name="txtUpdateAccountName" value="{{accountDetail.name}}"> </td> 
-                            <td style="color: brown;">{{errorMessage}}</td>
                         </tr>
                         <tr>
                             <td>Age : </td>
                             <td><input type="text" name="txtUpdateAge" value="{{accountDetail.age}}"></td>
-                            <td  style="color: brown;">{{errorMessage}}</td>
 
                         </tr>
 
                         <tr>
                             <td>PhoneNumber : </td>
                             <td><input type="text" name="txtUpdatePhoneNumber" value="{{accountDetail.phoneNumber}}"></td>
-                            <td  style="color: brown;">{{errorMessage}}</td>
 
                         </tr>
                         
                         <tr>
                             <td></td>
                             <td><input type="submit" value="Update" class="updateButton"></td>
+
                         </tr>
                     </form>
                 </table>
+                <h3  style="color: brown;">{{errorMessage}}</h3>
 
             </div>
 
